# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.20 ==
 * Require unique name for rspecs (#784)
 * Default browser named to 'Unknown' to avoid undefined var error. (#1166)

== 2.19 ==
 * Allow parallel AJAX deletes and renews (#998)
 * Use portal styling for OpenID trust page (#1007)
 * Add privilege check when requesting to view private RSpecs (#1054)
 * Comments and clearer logs when DB inconsistency gives WiMAX errors (#1058)
 * Support unicode/international strings in portal (#1069)
 * Add comments about new error messages in WiMAX (#1077)
  * Handle error 20 (group exists) by treating attempt to create
    the group as successful and adding the user to the group
    if needed.
 * Add a button for launching jFed on the Home, Slices and Slice pages. (#1092)
  * Suppress error log when user running Chrome on Mac. (#1156)
 * Update to new WiMAX method signatures, error messages (#1093)
 * WiMAX user and group names now start with "geni-". (#1094)
  * Added new project attribute for the `wimax_group_name`.
  * If project/group leads differ and new lead
    has no wimax account, add them to the group and make
    them lead.
  * Handle timeouts better.
  * Add/remove of member attributes clears the member cache in ma_client.
 * Fork omni/stitcher processes (#1106)
   * omni/stitching calls from create_sliver run asynchronously
   * Keep temporary files after creating slivers
   * Add bug reporting feature
   * Store request RSpecs (#164)
   * Show request RSpec used in a slice (#165)
   * Store manifest RSpecs (#225)
   * New tabbed results page shows logs of allocations
   * Go back to view previous allocation logs/results via link in
     "Recent Messages"
   * Per-node results show long-form name of AM for stitching requests
   * User-friendly error message shows when an error occurs due to the